Add expo cusotm font plugin and google font resource.

--- a/golf-club-selector/app.json
+++ b/golf-club-selector/app.json
@@ -33,7 +33,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      ["expo-font", { "fonts": ["./assets/fonts/Boldonse-Regular.ttf"] }]
     ],
     "experiments": {
       "typedRoutes": true
