Add and update fonts.

--- a/golf-club-selector/app.json
+++ b/golf-club-selector/app.json
@@ -34,7 +34,20 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      ["expo-font", { "fonts": ["./assets/fonts/Boldonse-Regular.ttf"] }]
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./assets/fonts/Boldonse-Regular.ttf",
+            "./assets/fonts/Montserrat-Bold.ttf",
+            "./assets/fonts/Montserrat-Regular.ttf",
+            "./assets/fonts/Montserrat-SemiBold.ttf",
+            "./assets/fonts/Hind-Bold.ttf",
+            "./assets/fonts/Hind-Regular.ttf",
+            "./assets/fonts/Hind-SemiBold.ttf"
+          ]
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
