Add expo location and ask for user permission to enable location.

--- a/golf-club-selector/app.json
+++ b/golf-club-selector/app.json
@@ -47,6 +47,12 @@
             "./assets/fonts/Hind-SemiBold.ttf"
           ]
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow ClubCaddy to use your location."
+        }
       ]
     ],
     "experiments": {
