View base map, added react-native-maps integration.

--- a/golf-club-selector/app.json
+++ b/golf-club-selector/app.json
@@ -10,7 +10,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.aar-woo.golf-club-selector"
+      "bundleIdentifier": "com.aar-woo.golf-club-selector",
+      "config": {
+        "googleMapsApiKey": "process.env.GOOGLE_MAPS_API_KEY"
+      }
     },
     "android": {
       "adaptiveIcon": {
