--- a/golf-club-selector/package.json
+++ b/golf-club-selector/package.json
@@ -28,12 +28,14 @@
     "expo-haptics": "~14.0.0",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.10",
     "expo-router": "4.0.11",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "geolib": "^3.3.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -43,8 +45,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-location": "~18.0.10"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
