--- a/golf-club-selector/package.json
+++ b/golf-club-selector/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@quidone/react-native-wheel-picker": "^1.4.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "dotenv": "^16.4.7",
